Adds LDAP auth support
